--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"pocketbase": "^0.21.2"
+		"pocketbase": "^0.21.2",
+		"svelte-carousel": "^1.0.25"
 	}
 }
