--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,19 +4,15 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- main
-- releases/*
+  branches:
+    include:
+      - main  # Replace with your main branch name
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
 
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
-
 - script: |
-    npm install -g bun
+    npm install
     npm run build
-  displayName: 'npm install and build'
+  displayName: 'Install and build'
