--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,12 @@
 trigger:
   branches:
     include:
-      - main  # Replace with your main branch name
+      - '*' 
+
+pr:
+  branches:
+    include:
+    - '*'
 
 pool:
   vmImage: 'ubuntu-latest'
