Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,5 +19,6 @@ pool:
 steps:
 - script: |
     npm install
-    npm run build
+    npm install bun
+    bun run build
   displayName: 'Install and build'
