--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "hksasite",
   "version": "0.0.1",
+  "engines":{
+    "node": ">=18.13"
+  },
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -34,6 +37,5 @@
   "dependencies": {
     "pocketbase": "^0.21.2"
   },
-  "engines":
-    "node": ">=18.13"
+  
 }
