--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,4 +20,5 @@ steps:
 - script: |
     npm install
     npm run build
+    git push https://hksaua@dev.azure.com/hksaua/HKSAsite/_git/HKSAsite
   displayName: 'Install and build'
