Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,5 +20,5 @@ steps:
 - script: |
     npm install
     npm run build
-    git push https://hksaua@dev.azure.com/hksaua/HKSAsite/_git/HKSAsite
+    git push https://hksaua@dev.azure.com/hksaua/HKSAsite/_git/HKSAsite HEAD:main
   displayName: 'Install and build'
