--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@supabase/ssr": "^0.4.0",
     "@vercel/postgres": "^0.9.0",
     "pocketbase": "^0.21.2",
     "svelte-adapter-azure-swa": "^0.20.1",
