--- a/.github/workflows/azure_github_workflow.yml
+++ b/.github/workflows/azure_github_workflow.yml
@@ -35,6 +35,13 @@ jobs:
           output_location: "./build/static" # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
           production_branch: "production"
+      - name: Create .env file
+        # You may pin to the exact commit or the version.
+        # uses: SpicyPizza/create-envfile@ace6d4f5d7802b600276c23ca417e669f1a06f6f
+        uses: SpicyPizza/create-envfile@v2.0.3
+        with:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_AUTH_KEY: ${{ secrets.SUPABASE_AUTH_KEY }}
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
