--- a/.github/workflows/azure_github_workflow.yml
+++ b/.github/workflows/azure_github_workflow.yml
@@ -40,8 +40,8 @@ jobs:
         # uses: SpicyPizza/create-envfile@ace6d4f5d7802b600276c23ca417e669f1a06f6f
         uses: SpicyPizza/create-envfile@v2.0.3
         with:
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_AUTH_KEY: ${{ secrets.SUPABASE_AUTH_KEY }}
+          SUPABASE_URL: ${{ env.SUPABASE_URL }}
+          SUPABASE_AUTH_KEY: ${{ env.SUPABASE_AUTH_KEY }}
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
