--- a/.github/workflows/azure_github_workflow.yml
+++ b/.github/workflows/azure_github_workflow.yml
@@ -19,16 +19,13 @@ jobs:
         with:
           submodules: true
           lfs: false
-        env:
-          SUPABASE_URL: ${{ env.SUPABASE_URL }}
-          SUPABASE_ANON_KEY: ${{ env.SUPABASE_ANON_KEY }}
       - name: Create .env file
         # You may pin to the exact commit or the version.
         # uses: SpicyPizza/create-envfile@ace6d4f5d7802b600276c23ca417e669f1a06f6f
         uses: SpicyPizza/create-envfile@v2.0.3
         with:
           envkey_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          envkey_SUPABASE_AUTH_KEY: ${{ secrets.SUPABASE_AUTH_KEY }}
+          envkey_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
