--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,4 +20,7 @@ steps:
 - script: |
     npm install
     npm run build
+  env:
+    SUPABASE_URL: $(SUPABASE_URL)
+    SUPABASE_ANON_KEY: $(SUPABASE_ANON_KEY)
   displayName: 'Install and build'
