--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.4.0",
     "@vercel/postgres": "^0.9.0",
+    "bun": "^1.1.22",
     "pocketbase": "^0.21.2",
     "svelte-adapter-azure-swa": "^0.20.1",
     "vercel": "^32.3.0"
