--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "type": "module",
   "dependencies": {
     "@supabase/ssr": "^0.4.0",
+    "@supabase/supabase-js": "^2.45.2",
     "@vercel/postgres": "^0.9.0",
     "bun": "^1.1.22",
     "pocketbase": "^0.21.2",
